--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.0.0",
+    "clsx": "^2.0.0",
+    "concurrently": "^8.0.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.0.0",
-    "axios": "^1.0.0",
-    "concurrently": "^8.0.0"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   }
 }
